Lib is now thread safe and suppports somehow progress