@@ -125,8 +125,8 @@
                         </goals>
                         <configuration>                            
                             <additionalJOptions>                                
-                                <additionalJOption>-add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx</additionalJOption>                                
-                                <additionalJOption>-add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx</additionalJOption>
+                                <additionalJOption>--add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx</additionalJOption>                                
+                                <additionalJOption>--add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx</additionalJOption>
                             </additionalJOptions>
                         </configuration>
                     </execution>
